# tree-sitter-times

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  justfile  package-lock.json  package.json  pyproject.toml  renovate.json5  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  update-flake-lock.yml
bindings/c/: tree-sitter-times.h  tree-sitter-times.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_times/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTimesTests/: TreeSitterTimesTests.swift
ftdetect/: times.vim
lua/tree-sitter-times/: init.lua
queries/times/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: booking.txt  role.txt
