[package]
name = "tree-sitter-times"
description = "times grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "times"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-times"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22"

[build-dependencies]
cc = "*"
