[package]
name = "tree-sitter-times"
description = "A grammer for ASCII timesheets"
version = "0.1.0"
authors = ["Michael Adler <therisen06@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "times"]
categories = ["parsing", "text-editors"]
repository = "git+https://github.com/michaeladler/tree-sitter-times.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2.20"

[dev-dependencies]
tree-sitter = "0.25.3"
